packages/installer/manifests/ttk/jic/ttk-ui-2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  creationTimestamp: null
  labels:
    mojaloop.service: ttk-ui-2
    mojaloop.layer: apps
  name: ttk-ui-2
spec:
  replicas: 1
  selector:
    matchLabels:
      mojaloop.service: ttk-ui-2
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
      creationTimestamp: null
      labels:
        mojaloop.service: ttk-ui-2
        mojaloop.layer: apps
    spec:
      containers:
        - args:
            - sh
            - /usr/share/nginx/start.sh
          image: mojaloop/ml-testing-toolkit-ui:v15.0.0
          name: ttk-ui-2
          ports:
            - containerPort: 6060
          resources: {}
          volumeMounts:
            - mountPath: /usr/share/nginx/html
              name: ttk2-ui-data
      restartPolicy: Always
      volumes:
        - name: ttk2-ui-data
          persistentVolumeClaim:
            claimName: ttk2-ui-data
status: {}
