packages/installer/manifests/ttk/jic/ttk_1-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  creationTimestamp: null
  labels:
    mojaloop.service: ttk-1
    mojaloop.layer: apps
  name: ttk-1
spec:
  ports:
    - name: "4040"
      port: 4040
      targetPort: 4040
    - name: "5050"
      port: 5050
      targetPort: 5050
  selector:
    mojaloop.service: ttk-1
status:
  loadBalancer: {}
