packages/installer/manifests/ttk/jic/ttk-ui-1-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ttk-ui-1-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: freda
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: ttk-ui-1
            port:
              number: 6060
